[AH-M] Implement Page Under Construction; fix Navigation mobile on-route

--- a/src/styles/base/_mixins/typography.scss
+++ b/src/styles/base/_mixins/typography.scss
@@ -78,6 +78,11 @@
     font-style: normal;
     font-weight: fonts.$fw-regular;
     line-height: 22px;
+
+    @include bp.lw(m) {
+        font-size: 18px;
+        line-height: 20px;
+    }
 }
 
 @mixin b2() {
